Rewrite database access

--- a/SD - 11. Fitness Events/fitness-turnstile/app/src/main/res/values-ru-rRU/strings.xml
+++ b/SD - 11. Fitness Events/fitness-turnstile/app/src/main/res/values-ru-rRU/strings.xml
@@ -7,4 +7,6 @@
     <string name="nfc_pass">Пропуск принят</string>
     <string name="nfc_processing">Обработка…</string>
     <string name="nfc_not_supported">Это устройство не поддерживает NFC</string>
+    <string name="visits_left">Осталось посещений:</string>
+    <string name="error">Ошибка</string>
 </resources>
